# AI-Infer-Acc

./: .gitignore  .gitmodules  AI_Inference_Acceleration_Plan.md  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  requirements.txt  test_record.md
.github/workflows/: install-verify.yml
apps/onnx_to_trt/: CMakeLists.txt
apps/onnx_to_trt/src/: onnx_to_trt.cpp
apps/simple_trt_test/: CMakeLists.txt
apps/simple_trt_test/src/: simple_trt_test.cpp
apps/trt_compare/: CMakeLists.txt
apps/trt_compare/src/: trt_compare.cpp
apps/trt_inference/: CMakeLists.txt
apps/trt_inference/src/: trt_inference.cpp
assets/: README.md
cmake/: trt_utilsConfig.cmake.in
docs/: CHANGELOG.md  FAQ.md  NEW_REPO_README_draft.md  TEST_RECORD.md
examples/consumer/: CMakeLists.txt  main.cpp
libs/trt_utils/: CMakeLists.txt
libs/trt_utils/include/trt_utils/: int8_calibrator.h  trt_builder.h  trt_common.h  trt_decode.h  trt_preprocess.h  trt_runtime.h  trt_vision.h
libs/trt_utils/src/: int8_calibrator.cpp  trt_builder.cpp  trt_common.cpp  trt_decode.cpp  trt_preprocess.cpp  trt_runtime.cpp  trt_vision.cpp
scripts/: download_calibration_data.py  fix_trt_symlinks.sh  generate_onnx_model.py  prepare_imagenet_val.py  setup_colab_env.sh  setup_docker_env.sh  setup_kaggle_env.sh  workflow_for_colab_env.ipynb  workflow_for_kaggle_env.ipynb
src/: 01_simple_trt_test.cpp  02_onnx_to_trt.cpp  03_trt_inference.cpp
